# tracy_as_library

./: LICENSE  readme.md
sample/: CMakeLists.txt  main.cpp
